Apply OpenRewrite rules